# adstastic.github.io

./: .gitignore  CLAUDE.md  CNAME  Gemfile  LICENSE  README.md  _config.yml  about.md  credits.md  disclaimer.md  fetch_and_generate_quotes.py  generate_quotes.py  hugo.toml  index.html  migrate_to_hugo.py  package-lock.json  package.json  pyproject.toml  readwise.db  readwise_to_posts.py  run_migration.py  sync_readwise.py  template.md  textlog.gemspec  upcoming.md  update_frontmatter.py  wishlist.md
_drafts/: 2020-01-01-barcelona-theft.md  2024-09-25-gtd.md  2025-01-22-deepseek-r1.md  2025-01-28-deepseek.md
_includes/: head.html  intro.html  nav.html
_layouts/: default.html  quote.html
_posts/: 2020-01-01-hello-world.md  2020-01-02-google-drive-full.md  2020-01-02-running-out-of-space.md  2020-03-01-keeping-up-to-date.md  2020-03-01-staying-informed-covid19.md  2020-03-30-covid19.md  2020-03-31-sudo-touchid.md  2020-04-06-covid19.md  2020-04-13-adblocking.md  2020-04-13-screen-recording-gif.md  2020-05-22-best-reads.md  2024-06-27-q-grant-sanderson.md  2024-06-27-quoting-grant-sanderson.md  2024-09-14-mental-forex.md  2024-09-17-karpathy-on-no-priors-podcast.md  2024-09-17-podcast-notes-no-priors-80-andrej-karpathy.md  2024-09-17-q-andrej-karpathy.md  2024-09-17-quoting-andrej-karpathy.md  2024-10-20-quoting-patrick-farley.md  2024-11-13-q-derren-brown.md  2024-12-29-q-oliver-burkeman.md  2024-12-29-quoting-oliver-burkeman.md  2025-01-01-q-adam-mastroianni.md  2025-01-01-q-ben-kuhn.md  2025-01-01-q-john-collison.md  2025-01-01-quoting-john-collison.md  (+22 more)
(+641 files in other folders)
