[project]
name = "adstastic-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "openai>=1.60.2",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
]
